--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   body{background:url('https://yaadlife.booorldwide.com/cdn/moonrise-montego.jpg') center/cover fixed;color:#fff;font-family:system-ui;min-height:100dvh;display:flex;flex-direction:column;overflow:hidden}
   .overlay{position:fixed;inset:0;background:rgba(0,0,0,0.78);backdrop-filter:blur(3px)}
   .c{position:relative;z-index:2;flex:1;display:flex;flex-direction:column;justify-content:center;align-items:center;padding:env(safe-area-inset-top) 1rem env(safe-area-inset-bottom)}
-  h1{font-size:clamp(4.8rem,13vw,9rem);font-weight:900;background:linear-gradient(var(--gold),#FFEDAB);-webkit-background-clip:text;-webkit-text-fill-color:transparent}
-  .motto{font-size:1.6rem;font-weight:600;opacity:0.92;margin:2rem 0 4rem}
+  h1{font-size:clamp(4.8rem,13vw,9rem);font-weight:900;background:linear-gradient(var(--gold),#FFEDAB);-webkit-background-clip:text;-webkit-text-fill-color:transparent;line-height:1}
+  .motto{font-size:1.6rem;font-weight:600;opacity:0.92;margin:2rem 0 4rem;letter-spacing:1px}
   .btn{width:88dvw;max-width:380px;margin:1.4rem auto;padding:1.6rem;border-radius:22px;font-size:1.9rem;font-weight:900;border:none;cursor:pointer;box-shadow:0 14px 40px rgba(0,0,0,0.6);transition:.2s}
   .gold{background:var(--gold);color:#000}
   .dark{background:var(--dark);color:var(--gold)}
@@ -20,11 +20,12 @@
   .btn:active{transform:scale(0.96)}
   #journey{max-width:420px;width:100%;margin-top:1rem}
   .stay{background:var(--green);border:4px solid var(--gold);padding:1rem;margin:1rem;border-radius:16px;overflow:hidden}
-  .stay img{width:100%;height:130px;object-fit:cover;border-radius:12px;margin-bottom:8px}
-  .panel{position:fixed;bottom:0;left:0;right:0;max-height:38vh;background:rgba(0,155,72,0.98);border-top:4px solid var(--gold);padding:1rem;border-radius:28px 28px 0 0;z-index:20;transform:translateY(100%);transition:.35s}
+  .stay img{width:100%;height:140px;object-fit:cover;border-radius:12px;margin-bottom:8px}
+  .panel{position:fixed;bottom:0;left:0;right:0;max-height:38vh;background:rgba(0,155,72,0.98);border-top:4px solid var(--gold);padding:1rem 1.2rem;border-radius:28px 28px 0 0;z-index:20;transform:translateY(100%);transition:transform .35s cubic-bezier(0.22,1,0.36,1)}
   .panel.active{transform:translateY(0)}
-  .close{float:right;font-size:2.4rem;background:none;border:none;color:#fff}
-  .num{width:64px;height:64px;line-height:64px;font-size:2.2rem;background:var(--dark);color:var(--gold);border-radius:50%;margin:0 10px}
+  .close{float:right;font-size:2.4rem;background:none;border:none;color:#fff;cursor:pointer}
+  .num{width:68px;height:68px;line-height:68px;font-size:2.4rem;background:var(--dark);color:var(--gold);border-radius:50%;margin:0 12px;display:inline-block}
+  select, input{padding:12px;font-size:1.3rem;border-radius:12px;width:100%;margin:8px 0}
 </style>
 </head>
 <body>
@@ -38,26 +39,31 @@
   <button id="add" class="btn green hidden">Next Yaad?</button>
 </div>
 
-<!-- Tiny floating panel — 38% max height -->
+<!-- 38% Floating Panel – How Much a Go? -->
 <div id="peoplePanel" class="panel">
   <button class="close" onclick="document.getElementById('peoplePanel').classList.remove('active')">×</button>
-  <h2 style="font-size:1.7rem;margin:0.5rem 0">How Much a Go?</h2>
-  <div style="text-align:center;font-size:1.4rem">
-    Big People − <button onclick="adj('a',-1)">−</button> <b id="a" class="num">1</b> <button onclick="adj('a',1)">+</button><br><br>
-    Pickney − <button onclick="adj('c',-1)">−</button> <b id="c" class="num">0</b> <button onclick="adj('c',1)">+</button><br><br>
-    Baby − <button onclick="adj('i',-1)">−</button> <b id="i" class="num">0</b> <button onclick="adj('i',1)">+</button><br><br>
-    <select id="pets" style="padding:10px;font-size:1.3rem"><option>No</option><option>Dog</option><option>Cat</option><option>Both</option></select>
+  <h2 style="font-size:1.7rem;margin:0.5rem 0;text-align:center">How Much a Go?</h2>
+  <div style="text-align:center">
+    <div>Big People <button onclick="adj('a',-1)">−</button> <b id="a" class="num">1</b> <button onclick="adj('a',1)">+</button></div>
+    <div>Pickney <button onclick="adj('c',-1)">−</button> <b id="c" class="num">0</b> <button onclick="adj('c',1)">+</button></div>
+    <div>Baby <button onclick="adj('i',-1)">−</button> <b id="i" class="num">0</b> <button onclick="adj('i',1)">+</button></div>
+    <select id="pets"><option>No</option><option>Dog</option><option>Cat</option><option>Both</option></select>
   </div>
-  <button class="btn gold" style="margin-top:1rem;font-size:1.6rem;padding:1.2rem" onclick="savePeople()">LOCK IN & BOOK</button>
+  <button class="btn gold" style="margin-top:1rem" onclick="savePeople()">LOCK IN & BOOK</button>
 </div>
 
 <script>
   let traveller = {a:1,c:0,i:0,pets:"No"};
   let stays = [], stage = 0;
-  const labels = {0:"Look Drive?",1:"Wa yuh a go do?",2:"Nyammin’s",3:"Vybes",4:"PAY FI DI YAAD"};
-  const primary = document.getElementById("primary");
-  const add = document.getElementById("add");
-  const journey = document.getElementById("journey");
+  const labels = ["Look Drive?","Wa yuh a go do?","Nyammin’s","Vybes","PAY FI DI YAAD"];
+  const images = ["pegasus","van","dunns","scotchies","ricks"];
+  const items = [
+    "Jamaica Pegasus • Town • 3 nights",
+    "Private Van (fits X)",
+    "Dunn’s River (family package)",
+    "Scotchie’s Jerk (pickney seats)",
+    "Rick’s Café Sunset Vybes"
+  ];
 
   function adj(t,d){
     if(t==='a'?traveller.a+d>=1:traveller[t]+d>=0){
@@ -65,12 +71,14 @@
       document.getElementById(t).textContent = traveller[t];
     }
   }
+
   function savePeople(){
     traveller.pets = document.getElementById("pets").value;
     document.getElementById("peoplePanel").classList.remove("active");
-    add.classList.remove("hidden");
-    primary.textContent = labels[0];
+    document.getElementById("add").classList.remove("hidden");
+    document.getElementById("primary").textContent = labels[0];
   }
+
   function calcPrice(base){
     let p = base;
     if(traveller.a>2) p += 45*(traveller.a-2);
@@ -78,42 +86,42 @@
     if(traveller.pets!=="No") p += 50;
     return p;
   }
-  function update(){
-    journey.innerHTML = stays.map((s,i)=>`
+
+  function updateJourney(){
+    document.getElementById("journey").innerHTML = stays.map((item,i)=>`
       <div class="stay">
-        <img src="https://yaadlife.booorldwide.com/cdn/${i===0?'pegasus':i===1?'van':i===2?'dunns':i===3?'scotchies':'ricks'}.jpg">
-        <div style="font-weight:900">${s}</div>
-      </div>`).join("");
+        <img src="https://yaadlife.booorldwide.com/cdn/${images[i] || 'generic'}.jpg" alt="${item}">
+        <div style="font-weight:900;font-size:1.3rem">${item} • $${calcPrice(i===0?280:220)} USD</div>
+      </div>
+    `).join("");
   }
 
-  primary.onclick = () => {
+  document.getElementById("primary").onclick = () => {
     if(stays.length===0){
       document.getElementById("peoplePanel").classList.add("active");
     } else if(stage < 4){
       stage++;
-      const items = [
-        `Private Van (fits ${traveller.a+traveller.c}${traveller.pets!=="No"?" + pets":""})`,
-        "Dunn’s River (family package)",
-        "Scotchie’s Jerk (pickney seats)",
-        "Rick’s Café Sunset Vybes"
-      ];
-      stays.push(items[stage-1]);
-      primary.textContent = labels[stage];
-      update();
+      let text = items[stage];
+      if(stage===1) text = text.replace("X",traveller.a+traveller.c+(traveller.pets!=="No"?" + pets":""));
+      stays.push(text);
+      document.getElementById("primary").textContent = labels[stage];
+      updateJourney();
     } else {
-      const total = stays.reduce((a,s)=>a+(parseInt(s.match(/\d+/)||[0])[0]||0),0) + calcPrice(280);
-      primary.textContent = `PAY FI DI YAAD → $${total} USD`;
+      const total = stays.length * 280 + (stays.length-1)*50;
+      document.getElementById("primary").textContent = `PAY FI DI YAAD → $${total} USD`;
     }
   };
 
-  add.onclick = () => {
-    stays.push(`Next Yaad • $${calcPrice(220)} USD`);
-    update();
+  document.getElementById("add").onclick = () => {
+    stays.push("Next Yaad");
+    updateJourney();
   };
 
-  document.getElementById("mint").onclick = () => new WalletConnect.Modal({projectId:"YOUR_ID"}).open();
+  document.getElementById("mint").onclick = () => {
+    new WalletConnect.Modal({projectId:"YOUR_ID_HERE"}).open();
+  };
 
-  update();
+  updateJourney();
 </script>
 </body>
 </html>
