--- a/index.html
+++ b/index.html
@@ -8,24 +8,23 @@
 <style>
   :root{--gold:#FFD700;--green:#009B48;--dark:#0a0a0a}
   *{margin:0;padding:0;box-sizing:border-box}
-  body{background:url('https://yaadlife.booorldwide.com/cdn/moonrise-montego.jpg') center/cover fixed;color:#fff;font-family:system-ui;min-height:100dvh;display:flex;flex-direction:column;overflow:hidden}
+  body{background:url('https://yaadlife.booorldwide.com/cdn/moonrise-montego.jpg') center/cover fixed;color:#fff;font-family:system-ui;min-height:100dvh;display:flex;flex-direction:column}
   .overlay{position:fixed;inset:0;background:rgba(0,0,0,0.78);backdrop-filter:blur(3px)}
-  .c{position:relative;z-index:2;flex:1;display:flex;flex-direction:column;justify-content:center;align-items:center;padding:env(safe-area-inset-top) 1rem env(safe-area-inset-bottom)}
-  h1{font-size:clamp(4.8rem,13vw,9rem);font-weight:900;background:linear-gradient(var(--gold),#FFEDAB);-webkit-background-clip:text;-webkit-text-fill-color:transparent;line-height:1}
-  .motto{font-size:1.6rem;font-weight:600;opacity:0.92;margin:2rem 0 4rem;letter-spacing:1px}
-  .btn{width:88dvw;max-width:380px;margin:1.4rem auto;padding:1.6rem;border-radius:22px;font-size:1.9rem;font-weight:900;border:none;cursor:pointer;box-shadow:0 14px 40px rgba(0,0,0,0.6);transition:.2s}
+  .c{position:relative;z-index:2;flex:1;display:flex;flex-direction:column;align-items:center;padding:env(safe-area-inset-top) 1rem 6rem}
+  h1{font-size:clamp(4.8rem,13vw,9rem);font-weight:900;background:linear-gradient(var(--gold),#FFEDAB);-webkit-background-clip:text;-webkit-text-fill-color:transparent}
+  .motto{font-size:1.6rem;font-weight:600;opacity:0.92;margin:2rem 0 3rem}
+  .btn{width:88dvw;max-width:380px;margin:1.2rem auto;padding:1.6rem;border-radius:22px;font-size:1.9rem;font-weight:900;border:none;cursor:pointer;box-shadow:0 14px 40px rgba(0,0,0,0.6);transition:.2s}
   .gold{background:var(--gold);color:#000}
   .dark{background:var(--dark);color:var(--gold)}
   .green{background:var(--green);color:#fff;border:4px solid var(--gold)}
   .btn:active{transform:scale(0.96)}
-  #journey{max-width:420px;width:100%;margin-top:1rem}
-  .stay{background:var(--green);border:4px solid var(--gold);padding:1rem;margin:1rem;border-radius:16px;overflow:hidden}
-  .stay img{width:100%;height:140px;object-fit:cover;border-radius:12px;margin-bottom:8px}
-  .panel{position:fixed;bottom:0;left:0;right:0;max-height:38vh;background:rgba(0,155,72,0.98);border-top:4px solid var(--gold);padding:1rem 1.2rem;border-radius:28px 28px 0 0;z-index:20;transform:translateY(100%);transition:transform .35s cubic-bezier(0.22,1,0.36,1)}
+  #journey{max-width:420px;width:100%;margin:1rem 0;overflow-y:auto;padding-bottom:2rem}
+  .stay{background:var(--green);border:4px solid var(--gold);padding:1.2rem;margin:1rem;border-radius:16px;overflow:hidden}
+  .stay img{width:100%;height:150px;object-fit:cover;border-radius:12px;margin-bottom:10px}
+  .panel{position:fixed;bottom:0;left:0;right:0;max-height:38vh;background:rgba(0,155,72,0.98);border-top:4px solid var(--gold);padding:1rem 1.2rem;border-radius:28px 28px 0 0;z-index:20;transform:translateY(100%);transition:transform .35s}
   .panel.active{transform:translateY(0)}
   .close{float:right;font-size:2.4rem;background:none;border:none;color:#fff;cursor:pointer}
   .num{width:68px;height:68px;line-height:68px;font-size:2.4rem;background:var(--dark);color:var(--gold);border-radius:50%;margin:0 12px;display:inline-block}
-  select, input{padding:12px;font-size:1.3rem;border-radius:12px;width:100%;margin:8px 0}
 </style>
 </head>
 <body>
@@ -39,14 +38,14 @@
   <button id="add" class="btn green hidden">Next Yaad?</button>
 </div>
 
-<!-- 38% Floating Panel – How Much a Go? -->
+<!-- v10 Floating Panel – How Much a Go? -->
 <div id="peoplePanel" class="panel">
   <button class="close" onclick="document.getElementById('peoplePanel').classList.remove('active')">×</button>
-  <h2 style="font-size:1.7rem;margin:0.5rem 0;text-align:center">How Much a Go?</h2>
+  <h2 style="text-align:center;font-size:1.7rem;margin:0.5rem 0">How Much a Go?</h2>
   <div style="text-align:center">
-    <div>Big People <button onclick="adj('a',-1)">−</button> <b id="a" class="num">1</b> <button onclick="adj('a',1)">+</button></div>
-    <div>Pickney <button onclick="adj('c',-1)">−</button> <b id="c" class="num">0</b> <button onclick="adj('c',1)">+</button></div>
-    <div>Baby <button onclick="adj('i',-1)">−</button> <b id="i" class="num">0</b> <button onclick="adj('i',1)">+</button></div>
+    Big People − <button onclick="adj('a',-1)">−</button> <b id="a" class="num">1</b> <button onclick="adj('a',1)">+</button><br><br>
+    Pickney − <button onclick="adj('c',-1)">−</button> <b id="c" class="num">0</b> <button onclick="adj('c',1)">+</button><br><br>
+    Baby − <button onclick="adj('i',-1)">−</button> <b id="i" class="num">0</b> <button onclick="adj('i',1)">+</button><br><br>
     <select id="pets"><option>No</option><option>Dog</option><option>Cat</option><option>Both</option></select>
   </div>
   <button class="btn gold" style="margin-top:1rem" onclick="savePeople()">LOCK IN & BOOK</button>
@@ -57,7 +56,7 @@
   let stays = [], stage = 0;
   const labels = ["Look Drive?","Wa yuh a go do?","Nyammin’s","Vybes","PAY FI DI YAAD"];
   const images = ["pegasus","van","dunns","scotchies","ricks"];
-  const items = [
+  const baseItems = [
     "Jamaica Pegasus • Town • 3 nights",
     "Private Van (fits X)",
     "Dunn’s River (family package)",
@@ -87,11 +86,11 @@
     return p;
   }
 
-  function updateJourney(){
+  function update(){
     document.getElementById("journey").innerHTML = stays.map((item,i)=>`
       <div class="stay">
-        <img src="https://yaadlife.booorldwide.com/cdn/${images[i] || 'generic'}.jpg" alt="${item}">
-        <div style="font-weight:900;font-size:1.3rem">${item} • $${calcPrice(i===0?280:220)} USD</div>
+        <img src="https://yaadlife.booorldwide.com/cdn/${images[i]||'generic'}.jpg">
+        <div style="font-weight:900">${item} • $${calcPrice(i===0?280:220)} USD</div>
       </div>
     `).join("");
   }
@@ -101,27 +100,27 @@
       document.getElementById("peoplePanel").classList.add("active");
     } else if(stage < 4){
       stage++;
-      let text = items[stage];
+      let text = baseItems[stage];
       if(stage===1) text = text.replace("X",traveller.a+traveller.c+(traveller.pets!=="No"?" + pets":""));
       stays.push(text);
       document.getElementById("primary").textContent = labels[stage];
-      updateJourney();
+      update();
     } else {
-      const total = stays.length * 280 + (stays.length-1)*50;
+      const total = stays.reduce((a,s,i)=>a + calcPrice(i===0?280:220),0);
       document.getElementById("primary").textContent = `PAY FI DI YAAD → $${total} USD`;
     }
   };
 
   document.getElementById("add").onclick = () => {
     stays.push("Next Yaad");
-    updateJourney();
+    update();
   };
 
   document.getElementById("mint").onclick = () => {
     new WalletConnect.Modal({projectId:"YOUR_ID_HERE"}).open();
   };
 
-  updateJourney();
+  update();
 </script>
 </body>
 </html>
